# macrophage-napari

./: README.md  requirements.txt  setup.cfg
napari_macrophage/: analysis.py  bbox.py  build_widgets.py  edit_mask_image.py  error.py  io.py  napari.yaml  segmentation.py  state.py  ui.py
napari_macrophage/models/: .gitkeep
tests/: test_analysis.py
