[metadata]
name = napari-macrophage
version = 0.0.1
classifiers =
    Framework :: napari

[options]
packages = find:
include_package_data = True # instruct setuptools to include that napari.yaml file when it bundles our package for distribution
install_requires = # all package dependencies
    napari
    magicgui
    tifffile
    numpy

[options.entry_points] # for napari to find our plugin when it’s installed in the environment
napari.manifest =
    napari-macrophage = napari_macrophage:napari.yaml